# pgen

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
src/: main.rs
