[package]
name = "pgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Strip symbols.
opt-level = "z"  # Optimize for size.

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
rand = "0.8.5"

