[package]
name = "cli"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Strip symbols.
opt-level = "z"  # Optimize for size.

[dependencies]
pgen = { path = "../lib" }
clap = { version = "4.6.1", features = ["derive", "cargo"]}

[[bin]]
name = "pgen"
path = "src/main.rs"
